# CSAD_2526_Ki-406_Oleksandr-Petruk_19

./: .gitignore  CMakeLists.txt  README.md  ci.cmd  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
